# smart-ask

./: .gitignore  DESIGN.md  LICENSE  README.md  anthropic-gateway-openai-codex.example.yaml  anthropic-gateway.example.yaml  claude-code-adapter.example.yaml  claude-code-openai-codex.example.yaml  pyproject.toml  skill.md  smart-ask  swe_bench_tasks.json
benchmark/: REAL_SWEBENCH.md  analyze.py  compare.py  real_swebench.py  report.py  run_bench.sh
benchmark-history/: README.md
benchmark-history/2026-07-02/: README.md
benchmarks/: __init__.py  artifacts.py  cli.py  compare.py  plot_teaser.py  runner.py  suite.py
benchmarks/humaneval/: README.md  __init__.py  __main__.py  results.json  results_cascade.json  results_product.json  results_routing.json  run.py  run_cascade.py  run_product.py  run_routing.py  suite.py  token_log.json
benchmarks/livebench/: __init__.py  __main__.py  results_opus_baseline.json  results_product.json  run_opus_baseline.py  run_product.py  suite.py
cost/: __init__.py  realtime.py  tracker.py
docs/: anthropic-gateway.md
harness/: __init__.py  runner.py
integrations/claude_code/: README.md  pyproject.toml
integrations/claude_code/src/smart_ask_claude_code/: __init__.py  app.py  auth.py  catalog.py  cli.py  codec.py  config.py  metrics.py  trace.py
integrations/claude_code/tests/: test_adapter.py
methods/: __init__.py  cascade.py  gate1.py  gate2.py  models.py
prompts/: marker-escalation.txt  marker-self-check.txt  python-code-generation-system.txt  python-function-completion-system.txt
scripts/: README.md  claude-local-qwen  claude-smart-ask  claude-smart-ask.local.env.example  eval-smart-code
skills/: smart-ask.md
smart_ask/: __init__.py  _numeric.py  _terminal.py  application.py  cli.py  config.py  domain.py  routing.py
strategies/: product.yaml  python-code-generation-cascade.yaml  python-code-generation-fixed-opus.yaml  python-function-completion-cascade.yaml  python-function-completion-difficulty-v1.yaml  python-function-completion-difficulty-v2.yaml  python-function-completion-fixed-opus.yaml
tests/: __init__.py  helpers.py  test_anthropic_gateway.py  test_application.py  test_benchmark_analysis.py  test_benchmark_analyze_script.py  test_benchmark_framework.py  test_benchmark_strategy_engine_runner.py  test_claude_local_qwen_launcher.py  test_claude_smart_ask_launcher.py  test_cli_engine.py  test_conversation_runtime.py  test_conversation_strategy_methods.py  test_counterfactual_quality.py  test_domain.py  test_executors_and_benchmarks.py  test_methods.py  test_no_legacy_architecture.py  test_provider_transports.py  test_real_swebench_harness.py  test_resource_rollups.py  test_response_evidence.py  test_routing_analysis.py  test_routing_quality.py  test_run_metrics.py  test_stats.py  test_strategy_config.py  test_strategy_engine.py  test_target_executor.py
(+129 files in other folders)
