[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-ask"
version = "0.2.0"
description = "Configurable routing between language models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "openai>=2,<3",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
bench = [
  "datasets>=2",
]

[project.scripts]
smart-ask = "smart_ask.cli:main"

[tool.setuptools.package-data]
smart_ask = [
  "resources/prompts/*.txt",
  "resources/strategies/*.yaml",
  "benchmarks/humaneval/README.md",
]

[tool.setuptools.packages.find]
include = ["smart_ask*"]
