[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-ask-claude-code"
version = "0.2.0"
description = "External Claude Code protocol adapter for SmartAsk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "smart-ask>=0.4,<0.5",
  "anyio>=4,<5",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "starlette>=0.37,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
smart-ask-claude-code = "smart_ask_claude_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["smart_ask_claude_code*"]
